force-app/main/default/objects/SPEN_IncidentHistory__c/SPEN_IncidentHistory__c.object-meta.xml
<CustomObject>
    <label>Incident History</label>
    <nameField>
        <displayFormat>IH-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>