force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_ActiveContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActiveContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Histories</relationshipLabel>
    <relationshipName>Incident_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>