force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_ActiveNumberofCustomers__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ActiveNumberofCustomers__c</fullName>
    <label>Active Number of Customers</label>
    <length>80</length>
    <type>Text</type>
</CustomField>