force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_Field__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Field__c</fullName>
    <label>Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>