force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_IncidentId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_IncidentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incident</label>
    <referenceTo>Incident</referenceTo>
    <relationshipLabel>Incident Histories</relationshipLabel>
    <relationshipName>SPEN_Incident</relationshipName>
    <type>Lookup</type>
</CustomField>