force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_NewValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_NewValue__c</fullName>
    <label>New Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>