force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_OldValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OldValue__c</fullName>
    <label>Old Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>