force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_RestoredContactId__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RestoredContactId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Restored Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Incident Histories (Restored Contact)</relationshipLabel>
    <relationshipName>Incident_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>