force-app/main/default/objects/SPEN_IncidentHistory__c/fields/SPEN_RestoredNumberofCustomer__c.field-meta.xml
<CustomField>
    <fullName>SPEN_RestoredNumberofCustomer__c</fullName>
    <label>Restored Number of Customer</label>
    <length>80</length>
    <type>Text</type>
</CustomField>